manual update and ijk range check in spincf in(ijk)

--- a/doc/cdoperator.tex
+++ b/doc/cdoperator.tex
@@ -36,17 +36,19 @@ the expectation values of tesseral harmonics at the right side of equation (\ref
 be rewritten using the operator equivalent method by Stevens\cite{hutchings64-227}:
 
   \begin{equation}
-	      \langle\sum_i Z_l^{m}(\Omega_i)\rangle = c_{lm} \theta_{l} \langle O_l^m(\mbf J)\rangle_T 
+	      \langle\sum_i Z_l^{m}(\Omega_i)\rangle = |p_{lm}| \theta_{l} \langle O_l^m(\mbf J)\rangle_T 
 	      \end{equation} 
 
-Here, $c_{lm}$ are the pre factors of harmonic tesseral
-functions and $\Theta_l$
-correspond to the Stevens factors $\alpha$,$\beta$ and $\gamma$ for $l=$~2,4,6, respectively.
+Here, $p_{lm}$ are the pre factors of harmonic tesseral
+functions and $\theta_l$
+corresponds to the number of $4f$ electrons ($\nu$) in the
+$4f^{\nu}$ configuration for $l=0$ and to
+ the Stevens factors $\alpha$,$\beta$ and $\gamma$ for $l=$~2,4,6, respectively.
 This results in the following expression for the chargedensity:
 		  
   \begin{equation}\label{chargedensity_operator2}
-	       \langle \hat\rho(\mbf r)\rangle=|R_{4f}(r)|^2 \sum_{l=0,2,4,6}\sum_{m=-n,...,n}
-	       -|e|  c_{nm} \theta_{l} \langle O_l^m(\mbf J)\rangle_T Z_{lm}(\Omega)
+	       \langle \hat\rho(\mbf r)\rangle=-|e||R_{4f}(r)|^2 \sum_{l=0,2,4,6}\sum_{m=-l,...,l}
+	         |p_{lm}| \theta_{l} \langle O_l^m(\mbf J)\rangle_T Z_{lm}(\Omega)
 	      \end{equation} 
 
   
