--- a/doc/cfield.tex
+++ b/doc/cfield.tex
@@ -42,8 +42,8 @@ the crystal field can be described by the following Hamiltonian:
 
 \begin{equation}
 \label{cfham}
- {\mathcal H}= \sum_{s,lm} B_{lm} O_{lm}({\mbf J}^s) 
-	     - \sum_{s} g_{Js} \mu_B {\mbf J}^s {\mbf H} 
+ {\mathcal H}= \sum_{n,lm} B_{lm} O_{lm}({\mbf J}^n) 
+	     - \sum_{n} g_{Jn} \mu_B {\mbf J}^n {\mbf H} 
 \end{equation}
 
 The first term in equ.~\ref{cfham} describes the crystal field, the second the
@@ -101,6 +101,7 @@ to experimental data (see section~\ref{simannfit}).
 # comment followed by
 # the ion type and the crystal field parameters [meV]
  IONTYPE=Nd3+
+ GJ=0.727273
 # - note you can also do any pure spin problem by entering e.g. IONTYPE=S=2.5 
  B20=  0.116765                                           
  B22  =  0.134172                                           
@@ -118,7 +119,7 @@ Dx2=0.1
 Dy2=0
 Dz2=0.4
 # the temperature in Kelvin
-TEMP= 10
+T= 10
 # if you want you can apply a magnetic field in Tesla
 Bx=0
 By=0
@@ -161,14 +162,14 @@ Here comes the output file {\prg so1ion.out}:
 {\footnotesize
 \begin{verbatim}
 #{------------------------------------------------------------- 
-#                  C F I E L D / S O 1 I O N    5.50           |
+#                  C F I E L D / S O 1 I O N    5.60           |
 #                    A crystal field program                   |
 #               __________________________________              
 #              |         Peter  Hoffmann          |             
 #              |    Forschungszentrum Juelich     |             
 #              |Institut fuer Festkoerperforschung|             
 #               __________________________________              
-#    O U T P U T         Sat May 14 10:07:52 2011
+#    O U T P U T         Tue Aug 30 12:44:30 2011
 #-------------------------------------------------------------- 
 #!Temperature of the sample       T=  10.00 Kelvin                
 #!Ion                    IONTYPE= Nd3+                          
@@ -277,23 +278,18 @@ Here comes the output file {\prg so1ion.out}:
 #-------------------------------------------------------------- 
 # Energy Eigenvalues are in  meV   .          	            
 #--------------------------------------------------------------
-#!Nr of different energy levels   noflevels=10                 
+#!Nr of different energy levels   noflevels= 5                 
 #!Energy shift   Eshift=                       -2.6744 
 #                                                              
 # Because of the calibration freedom the smallest energy       
 # eigenvalue is shifted to zero. You can get the energy        
 # eigen-value of the applied eigen-value problem               
 # by shifting the energy by the added energy value above       
-#!*E( 1)=        0.0000        Degeneracy =   1 -fold            
-#!*E( 2)=        0.0000        Degeneracy =   1 -fold            
-#!*E( 3)=        2.4850        Degeneracy =   1 -fold            
-#!*E( 4)=        2.4850        Degeneracy =   1 -fold            
-#!*E( 5)=        4.5048        Degeneracy =   1 -fold            
-#!*E( 6)=        4.5048        Degeneracy =   1 -fold            
-#!*E( 7)=        7.8548        Degeneracy =   1 -fold            
-#!*E( 8)=        7.8548        Degeneracy =   1 -fold            
-#!*E( 9)=       19.1522        Degeneracy =   1 -fold            
-#!*E(10)=       19.1522        Degeneracy =   1 -fold            
+#!*E( 1)=        0.0000        Degeneracy =   2 -fold            
+#!*E( 2)=        2.4850        Degeneracy =   2 -fold            
+#!*E( 3)=        4.5048        Degeneracy =   2 -fold            
+#!*E( 4)=        7.8548        Degeneracy =   2 -fold            
+#!*E( 5)=       19.1522        Degeneracy =   2 -fold            
 # Them with  *  marked Energy eigenvalues have a non-          
 # vanishing Matrix element of the Ground state E( 1).          
 #-------------------------------------------------------------- 
@@ -337,55 +333,55 @@ Here comes the output file {\prg so1ion.out}:
 #          -    0.4563               I 4.5   1.5>              
 #          +    0.3633               I 4.5   3.5>              
 #                                                              
-# I 2, 1> =     0.3633               I 4.5  -3.5>              
+# I 1, 2> =     0.3633               I 4.5  -3.5>              
 #          -    0.4563               I 4.5  -1.5>              
 #          +    0.7083               I 4.5   0.5>              
 #          -    0.3955               I 4.5   2.5>              
 #          +    0.0414               I 4.5   4.5>              
 #                                                              
-# I 3, 1> =    -0.0402               I 4.5  -4.5>              
+# I 2, 1> =    -0.0402               I 4.5  -4.5>              
 #          +    0.1455               I 4.5  -2.5>              
 #          +    0.5713               I 4.5  -0.5>              
 #          +    0.1221               I 4.5   1.5>              
 #          -    0.7975               I 4.5   3.5>              
 #                                                              
-# I 4, 1> =     0.7975               I 4.5  -3.5>              
+# I 2, 2> =     0.7975               I 4.5  -3.5>              
 #          -    0.1221               I 4.5  -1.5>              
 #          -    0.5713               I 4.5   0.5>              
 #          -    0.1455               I 4.5   2.5>              
 #          +    0.0402               I 4.5   4.5>              
 #                                                              
-# I 5, 1> =    -0.0255               I 4.5  -3.5>              
+# I 3, 1> =    -0.0255               I 4.5  -3.5>              
 #          -    0.7164               I 4.5  -1.5>              
 #          -    0.0601               I 4.5   0.5>              
 #          +    0.6945               I 4.5   2.5>              
 #          -    0.0098               I 4.5   4.5>              
 #                                                              
-# I 6, 1> =     0.0098               I 4.5  -4.5>              
+# I 3, 2> =     0.0098               I 4.5  -4.5>              
 #          -    0.6945               I 4.5  -2.5>              
 #          +    0.0601               I 4.5  -0.5>              
 #          +    0.7164               I 4.5   1.5>              
 #          +    0.0255               I 4.5   3.5>              
 #                                                              
-# I 7, 1> =     0.4804               I 4.5  -3.5>              
+# I 4, 1> =     0.4804               I 4.5  -3.5>              
 #          +    0.5046               I 4.5  -1.5>              
 #          +    0.4065               I 4.5   0.5>              
 #          +    0.5712               I 4.5   2.5>              
 #          -    0.1522               I 4.5   4.5>              
 #                                                              
-# I 8, 1> =    -0.1522               I 4.5  -4.5>              
+# I 4, 2> =    -0.1522               I 4.5  -4.5>              
 #          +    0.5712               I 4.5  -2.5>              
 #          +    0.4065               I 4.5  -0.5>              
 #          +    0.5046               I 4.5   1.5>              
 #          +    0.4804               I 4.5   3.5>              
 #                                                              
-# I 9, 1> =     0.9866               I 4.5  -4.5>              
+# I 5, 1> =     0.9866               I 4.5  -4.5>              
 #          +    0.1175               I 4.5  -2.5>              
 #          +    0.0557               I 4.5  -0.5>              
 #          +    0.0948               I 4.5   1.5>              
 #          +    0.0261               I 4.5   3.5>              
 #                                                              
-# I10, 1> =     0.0261               I 4.5  -3.5>              
+# I 5, 2> =     0.0261               I 4.5  -3.5>              
 #          +    0.0948               I 4.5  -1.5>              
 #          +    0.0557               I 4.5   0.5>              
 #          +    0.1175               I 4.5   2.5>              
@@ -408,115 +404,35 @@ Here comes the output file {\prg so1ion.out}:
 #    a  <-->  b      |<a|J |b>|  |  |<a|J |b>|  |  |<a|J |b>|  
 #                         x      |       y      |       z      
 #--------------------------------+--------------+--------------
-#    1  <-->  1       0.000000   |   0.000000   |   0.015521   
+#    1  <-->  1       0.002008   |  36.711411   |   0.031042   
 #--------------------------------+--------------+--------------
-#    2  <-->  1       0.001004   |  18.355706   |   0.000000   
+#    2  <-->  1       1.949420   |   0.270090   |   2.638097   
 #--------------------------------+--------------+--------------
-#    2  <-->  2       0.000000   |   0.000000   |   0.015521   
+#    2  <-->  2       1.517583   |   2.490016   |   8.199948   
 #--------------------------------+--------------+--------------
-#    3  <-->  1       0.000000   |   0.000000   |   1.319048   
+#    3  <-->  1       1.415357   |   0.424874   |   2.727140   
 #--------------------------------+--------------+--------------
-#    3  <-->  2       0.974710   |   0.135045   |   0.000000   
+#    3  <-->  2      10.148894   |   8.149608   |   0.176745   
 #--------------------------------+--------------+--------------
-#    3  <-->  3       0.000000   |   0.000000   |   4.099974   
+#    3  <-->  3       9.078618   |  11.619418   |   0.380198   
 #--------------------------------+--------------+--------------
-#    4  <-->  1       0.974710   |   0.135045   |   0.000000   
+#    4  <-->  1       0.009374   |   1.424032   |   1.021019   
 #--------------------------------+--------------+--------------
-#    4  <-->  2       0.000000   |   0.000000   |   1.319048   
+#    4  <-->  2       2.500806   |   2.020701   |   5.118137   
 #--------------------------------+--------------+--------------
-#    4  <-->  3       0.758792   |   1.245008   |   0.000000   
+#    4  <-->  3       0.239888   |   0.004479   |   4.938522   
 #--------------------------------+--------------+--------------
-#    4  <-->  4       0.000000   |   0.000000   |   4.099974   
+#    4  <-->  4      26.164401   |   0.690989   |   0.070056   
 #--------------------------------+--------------+--------------
-#    5  <-->  1       0.707679   |   0.212437   |   0.000000   
+#    5  <-->  1       0.710568   |   0.137243   |   0.028325   
 #--------------------------------+--------------+--------------
-#    5  <-->  2       0.000000   |   0.000000   |   1.363570   
+#    5  <-->  2       2.282293   |   2.029398   |   0.008264   
 #--------------------------------+--------------+--------------
-#    5  <-->  3       5.074447   |   4.074804   |   0.000000   
+#    5  <-->  3       0.057679   |   0.000101   |   0.138477   
 #--------------------------------+--------------+--------------
-#    5  <-->  4       0.000000   |   0.000000   |   0.088373   
+#    5  <-->  4       3.524062   |   1.023958   |   0.749577   
 #--------------------------------+--------------+--------------
-#    5  <-->  5       0.000000   |   0.000000   |   0.190099   
-#--------------------------------+--------------+--------------
-#    6  <-->  1       0.000000   |   0.000000   |   1.363570   
-#--------------------------------+--------------+--------------
-#    6  <-->  2       0.707679   |   0.212437   |   0.000000   
-#--------------------------------+--------------+--------------
-#    6  <-->  3       0.000000   |   0.000000   |   0.088373   
-#--------------------------------+--------------+--------------
-#    6  <-->  4       5.074447   |   4.074804   |   0.000000   
-#--------------------------------+--------------+--------------
-#    6  <-->  5       4.539309   |   5.809709   |   0.000000   
-#--------------------------------+--------------+--------------
-#    6  <-->  6       0.000000   |   0.000000   |   0.190099   
-#--------------------------------+--------------+--------------
-#    7  <-->  1       0.004687   |   0.712016   |   0.000000   
-#--------------------------------+--------------+--------------
-#    7  <-->  2       0.000000   |   0.000000   |   0.510509   
-#--------------------------------+--------------+--------------
-#    7  <-->  3       1.250403   |   1.010350   |   0.000000   
-#--------------------------------+--------------+--------------
-#    7  <-->  4       0.000000   |   0.000000   |   2.559069   
-#--------------------------------+--------------+--------------
-#    7  <-->  5       0.000000   |   0.000000   |   2.469261   
-#--------------------------------+--------------+--------------
-#    7  <-->  6       0.119944   |   0.002240   |   0.000000   
-#--------------------------------+--------------+--------------
-#    7  <-->  7       0.000000   |   0.000000   |   0.035028   
-#--------------------------------+--------------+--------------
-#    8  <-->  1       0.000000   |   0.000000   |   0.510509   
-#--------------------------------+--------------+--------------
-#    8  <-->  2       0.004687   |   0.712016   |   0.000000   
-#--------------------------------+--------------+--------------
-#    8  <-->  3       0.000000   |   0.000000   |   2.559069   
-#--------------------------------+--------------+--------------
-#    8  <-->  4       1.250403   |   1.010350   |   0.000000   
-#--------------------------------+--------------+--------------
-#    8  <-->  5       0.119944   |   0.002240   |   0.000000   
-#--------------------------------+--------------+--------------
-#    8  <-->  6       0.000000   |   0.000000   |   2.469261   
-#--------------------------------+--------------+--------------
-#    8  <-->  7      13.082200   |   0.345494   |   0.000000   
-#--------------------------------+--------------+--------------
-#    8  <-->  8       0.000000   |   0.000000   |   0.035028   
-#--------------------------------+--------------+--------------
-#    9  <-->  1       0.000000   |   0.000000   |   0.014163   
-#--------------------------------+--------------+--------------
-#    9  <-->  2       0.355284   |   0.068622   |   0.000000   
-#--------------------------------+--------------+--------------
-#    9  <-->  3       0.000000   |   0.000000   |   0.004132   
-#--------------------------------+--------------+--------------
-#    9  <-->  4       1.141146   |   1.014699   |   0.000000   
-#--------------------------------+--------------+--------------
-#    9  <-->  5       0.028839   |   0.000051   |   0.000000   
-#--------------------------------+--------------+--------------
-#    9  <-->  6       0.000000   |   0.000000   |   0.069239   
-#--------------------------------+--------------+--------------
-#    9  <-->  7       1.762031   |   0.511979   |   0.000000   
-#--------------------------------+--------------+--------------
-#    9  <-->  8       0.000000   |   0.000000   |   0.374789   
-#--------------------------------+--------------+--------------
-#    9  <-->  9       0.000000   |   0.000000   |  19.365074   
-#--------------------------------+--------------+--------------
-#   10  <-->  1       0.355284   |   0.068622   |   0.000000   
-#--------------------------------+--------------+--------------
-#   10  <-->  2       0.000000   |   0.000000   |   0.014163   
-#--------------------------------+--------------+--------------
-#   10  <-->  3       1.141146   |   1.014699   |   0.000000   
-#--------------------------------+--------------+--------------
-#   10  <-->  4       0.000000   |   0.000000   |   0.004132   
-#--------------------------------+--------------+--------------
-#   10  <-->  5       0.000000   |   0.000000   |   0.069239   
-#--------------------------------+--------------+--------------
-#   10  <-->  6       0.028839   |   0.000051   |   0.000000   
-#--------------------------------+--------------+--------------
-#   10  <-->  7       0.000000   |   0.000000   |   0.374789   
-#--------------------------------+--------------+--------------
-#   10  <-->  8       1.762031   |   0.511979   |   0.000000   
-#--------------------------------+--------------+--------------
-#   10  <-->  9       0.030356   |   0.009597   |   0.000000   
-#--------------------------------+--------------+--------------
-#   10  <--> 10       0.000000   |   0.000000   |  19.365074   
+#    5  <-->  5       0.060712   |   0.019195   |  38.730148   
 #-------------------------------------------------------------- 
 #
 #
@@ -545,41 +461,26 @@ Here comes the output file {\prg so1ion.out}:
 #             ----         T           i  3                    
 #             k,r,s                                            
 #-------------------------------------------------------------- 
-#------------------------------------------------- 
-# \ E |   |   |   |   |   |   |   |   |   |   |Zei|
-#E \ k|E  |E  |E  |E  |E  |E  |E  |E  |E  |E  |len|
-# i \ | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10|sum|
-#----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   | 12|   |   |   |   |   |   |   |   | 16|
-#|  1 |.01|.24|.88|.74|.61|.91|.48|.34|.01|.28|.50|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  | 12|   |   |   |   |   |   |   |   |   | 16|
-#|  2 |.24|.01|.74|.88|.91|.61|.34|.48|.28|.01|.50|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |  2|  1|  6|   |  1|  1|   |  1| 16|
-#|  3 |.88|.74|.73|.34|.10|.06|.51|.71|   |.44|.50|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |  1|  2|   |  6|  1|  1|  1|   | 16|
-#|  4 |.74|.88|.34|.73|.06|.10|.71|.51|.44|   |.50|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |  6|   |   |  6|  1|   |   |   | 16|
-#|  5 |.61|.91|.10|.06|.13|.90|.65|.08|.02|.05|.50|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |  6|  6|   |   |  1|   |   | 16|
-#|  6 |.91|.61|.06|.10|.90|.13|.08|.65|.05|.02|.50|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |  1|  1|  1|   |   |  8|  1|   | 16|
-#|  7 |.48|.34|.51|.71|.65|.08|.02|.95|.52|.25|.50|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |  1|  1|   |  1|  8|   |   |  1| 16|
-#|  8 |.34|.48|.71|.51|.08|.65|.95|.02|.25|.52|.50|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |  1|   |   |  1|   | 12|   | 16|
-#|  9 |.01|.28|   |.44|.02|.05|.52|.25|.91|.03|.50|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |  1|   |   |   |   |  1|   | 12| 16|
-#|  10|.28|.01|.44|   |.05|.02|.25|.52|.03|.91|.50|
-# ------------------------------------------------ 
+#----------------------------- 
+# \ E |   |   |   |   |   |Zei|
+#E \ k|E  |E  |E  |E  |E  |len|
+# i \ | 1 | 2 | 3 | 4 | 5 |sum|
+#----|---|---|---|---|---|---|
+#| E  | 24|  3|  3|  1|   | 33|
+#|  1 |.50|.24|.04|.64|.58|   |
+#|----|---|---|---|---|---|---|
+#| E  |  3|  8| 12|  6|  2| 33|
+#|  2 |.24|.14|.32|.43|.88|   |
+#|----|---|---|---|---|---|---|
+#| E  |  3| 12| 14|  3|   | 33|
+#|  3 |.04|.32|.05|.46|.13|   |
+#|----|---|---|---|---|---|---|
+#| E  |  1|  6|  3| 17|  3| 33|
+#|  4 |.64|.43|.46|.95|.53|   |
+#|----|---|---|---|---|---|---|
+#| E  |   |  2|   |  3| 25| 33|
+#|  5 |.58|.88|.13|.53|.87|   |
+# ---------------------------- 
 #
 #
 #
@@ -647,158 +548,68 @@ Here comes the output file {\prg so1ion.out}:
 #-------------------------------------------------------------- 
 #!Total_magnetic_scattering_intensity =   7.94 barn            
 #-------------------------------------------------------------- 
-#------------------------------------------------- 
-# \ E |   |   |   |   |   |   |   |   |   |   |Zei|
-#E \ k|E  |E  |E  |E  |E  |E  |E  |E  |E  |E  |len|
-# i \ | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10|sum|
-#----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |  2|   |   |   |   |   |   |   |   |  3|
-#|  1 |   |.78|.20|.17|.14|.21|.11|.08|   |.06|.74|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |  2|   |   |   |   |   |   |   |   |   |  3|
-#|  2 |.78|   |.17|.20|.21|.14|.08|.11|.06|   |.74|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  3 |.01|.01|.03|.02|.08|   |.02|.02|   |.02|.21|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  4 |.01|.01|.02|.03|   |.08|.02|.02|.02|   |.21|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  5 |   |   |.01|   |   |.01|   |   |   |   |.02|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  6 |   |   |   |.01|.01|   |   |   |   |   |.02|
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  7 |   |   |   |   |   |   |   |   |   |   |   |
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  8 |   |   |   |   |   |   |   |   |   |   |   |
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  9 |   |   |   |   |   |   |   |   |   |   |   |
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  10|   |   |   |   |   |   |   |   |   |   |   |
-# ------------------------------------------------ 
+#----------------------------- 
+# \ E |   |   |   |   |   |Zei|
+#E \ k|E  |E  |E  |E  |E  |len|
+# i \ | 1 | 2 | 3 | 4 | 5 |sum|
+#----|---|---|---|---|---|---|
+#| E  |  5|   |   |   |   |  7|
+#|  1 |.55|.73|.69|.37|.13|.48|
+#|----|---|---|---|---|---|---|
+#| E  |   |   |   |   |   |   |
+#|  2 |.04|.10|.16|.08|.04|.42|
+#|----|---|---|---|---|---|---|
+#| E  |   |   |   |   |   |   |
+#|  3 |   |.01|.02|   |   |.04|
+#|----|---|---|---|---|---|---|
+#| E  |   |   |   |   |   |   |
+#|  4 |   |   |   |   |   |   |
+#|----|---|---|---|---|---|---|
+#| E  |   |   |   |   |   |   |
+#|  5 |   |   |   |   |   |   |
+# ---------------------------- 
 #
 #-----------------------------------------------------------
-#!Total_quasielastic_intensity =             0.07 barn           
+#!Total_quasielastic_intensity =             5.68 barn           
 #-----------------------------------------------------------
 #                  Neutron-Energy-loss                      
-#!middle_position_of_the_energy        =        0.14 meV    
-#!relative_error_in_the_middl_Position  =      188.64 %      
-#!Intensity_of_the_middle_position   =        2.97 barn   
+#!middle_position_of_the_energy        =        2.41 meV    
+#!relative_error_in_the_middl_Position  =        5.64 %      
+#!Intensity_of_the_middle_position   =        0.89 barn   
 #                  Neutron-Energy-Gain                 
-#!middle position of the energy        =       -0.01 meV    
-#!relative_error_in_the_middl_Position  =      199.33 %      
-#!Intensity_of_the_middle_position   =        2.81 barn   
+#!middle position of the energy        =       -2.36 meV    
+#!relative_error_in_the_middl_Position  =        7.74 %      
+#!Intensity_of_the_middle_position   =        0.06 barn   
 #-----------------------------------------------------------
 
 #-------------------------------------------------------------- 
 # Transition Energy (meV   ) vs Intensity (barn)                  
 #-------------------------------------------------------------- }
-  0.00   0.00
-  0.00   2.78
-  2.49   0.20
-  2.49   0.17
-  4.50   0.14
-  4.50   0.21
-  7.85   0.11
-  7.85   0.08
- 19.15   0.00
- 19.15   0.06
- -0.00   2.78
-  0.00   0.00
-  2.49   0.17
-  2.49   0.20
-  4.50   0.21
-  4.50   0.14
-  7.85   0.08
-  7.85   0.11
- 19.15   0.06
- 19.15   0.00
- -2.49   0.01
- -2.49   0.01
-  0.00   0.03
-  0.00   0.02
-  2.02   0.08
-  2.02   0.00
-  5.37   0.02
-  5.37   0.02
- 16.67   0.00
- 16.67   0.02
- -2.49   0.01
- -2.49   0.01
- -0.00   0.02
-  0.00   0.03
-  2.02   0.00
-  2.02   0.08
-  5.37   0.02
-  5.37   0.02
- 16.67   0.02
- 16.67   0.00
- -4.50   0.00
- -4.50   0.00
- -2.02   0.01
- -2.02   0.00
-  0.00   0.00
-  0.00   0.01
-  3.35   0.00
-  3.35   0.00
- 14.65   0.00
- 14.65   0.00
- -4.50   0.00
- -4.50   0.00
- -2.02   0.00
- -2.02   0.01
- -0.00   0.01
-  0.00   0.00
-  3.35   0.00
-  3.35   0.00
- 14.65   0.00
- 14.65   0.00
- -7.85   0.00
- -7.85   0.00
- -5.37   0.00
- -5.37   0.00
- -3.35   0.00
- -3.35   0.00
-  0.00   0.00
-  0.00   0.00
- 11.30   0.00
- 11.30   0.00
- -7.85   0.00
- -7.85   0.00
- -5.37   0.00
- -5.37   0.00
- -3.35   0.00
- -3.35   0.00
- -0.00   0.00
-  0.00   0.00
- 11.30   0.00
- 11.30   0.00
--19.15   0.00
--19.15   0.00
--16.67   0.00
--16.67   0.00
--14.65   0.00
--14.65   0.00
--11.30   0.00
--11.30   0.00
-  0.00   0.00
-  0.00   0.00
--19.15   0.00
--19.15   0.00
--16.67   0.00
--16.67   0.00
--14.65   0.00
--14.65   0.00
--11.30   0.00
--11.30   0.00
- -0.00   0.00
-  0.00   0.00
+  0.000  5.554803
+  2.485  0.734343
+  4.505  0.690467
+  7.855  0.371045
+ 19.152  0.132449
+ -2.485  0.041064
+  0.000  0.103197
+  2.020  0.156181
+  5.370  0.081489
+ 16.667  0.036519
+ -4.505  0.003705
+ -2.020  0.014986
+  0.000  0.017097
+  3.350  0.004204
+ 14.647  0.000159
+ -7.855  0.000041
+ -5.370  0.000160
+ -3.350  0.000086
+  0.000  0.000448
+ 11.297  0.000088
+-19.152  0.000000
+-16.667  0.000000
+-14.647  0.000000
+-11.297  0.000000
+  0.000  0.000000
 \end{verbatim}
 }
 \item at the end of the file {\prg so1ion.out} the neutron scattering cross section of the different 
@@ -927,32 +738,33 @@ to calculate the magnetic moment given an effective magnetic field.
 To be more explicit - given the effective magnetic field $H^s_{eff}$ by {\prg mcphas}
  the module {\prg so1ion\index{so1ion}}
  diagonalises the crystal field and Zeeman Hamiltonian (\ref{cfze}) of the
- ion $s$:
+ ion $n$:
 
 \begin{equation}\label{cfze}
- {\mathcal H}=  B_l^m O_{lm}({\mbf J}^s) 
-	     -  g_{Ji} \mu_B {\mbf J}^s {\mbf H^s_{eff}} 
+ {\mathcal H_n}=  B_l^m O_{lm}({\mbf J}^n) 
+	     -  g_{Jn} \mu_B {\mbf J}^n {\mbf H^n_{eff}} 
 \end{equation}
 
-and calculates the expectation value of the angular momentum $\langle \mbf J^s \rangle$
+and calculates the expectation value of the angular momentum
+ $\langle \mbf J^n \rangle$
 according to
 
 \begin{equation}
-\langle \mbf J^s \rangle =
-\sum_{\Gamma} n_{\Gamma} \langle \Gamma | \mbf J^s | \Gamma \rangle
+\langle \mbf J^n \rangle =
+\sum_{\Gamma} p_{\Gamma} \langle \Gamma | \mbf J^n | \Gamma \rangle
 \end{equation}
 
 with 
 
 \begin{eqnarray}
-n_{\Gamma}&=&\frac{\exp(-E_{\Gamma}/kT)}{z}\\
+p_{\Gamma}&=&\frac{\exp(-E_{\Gamma}/kT)}{z}\\
 z&=&\sum_{\Gamma} \exp(-E_{\Gamma}/kT)
 \end{eqnarray}
 
 Here $z$ is the partition sum, $|\Gamma\rangle$ the eigenstate corresponding to
 the eigenvalue $E_{\Gamma}$ of the Hamiltonian (\ref{cfze}). 
 \footnote{In addition to $\langle \mbf J_i \rangle$ the module also returns
-the partition sum $z$ and the magnetic energy $u=\sum_{\Gamma} n_{\Gamma} E_{\Gamma}$.}
+the partition sum $z$ and the magnetic energy $u=\sum_{\Gamma} p_{\Gamma} E_{\Gamma}$.}
 
 \subsubsection{Module Usage:}
  
