--- a/doc/li110830.bib
+++ b/doc/li110830.bib
@@ -1,3 +1,119 @@
+@book{mulak00-1,
+author={J. Mulak and Z. Gajek},
+title={The effective crystal field potential},
+year=2000,
+publisher={Elsivier Science Ltd, Kidlington, Oxford, UK}}
+
+@article{kassman70-4118,
+author={A. J. Kassman},
+journal={J. Chem. Phys.},
+volume=53,
+year=1970,
+pages=4118}
+
+@article{dekker,
+  author = {A J Dekker},
+  title2 = {Electrical Resistivity of Metals and Alloys Containing Localized Magnetic Moment},
+  journal = {J. Appl. Phys.},
+  volume = {36},
+  pages = {906--912},
+  year = {1965},
+  publisher = {American Institute of Physics}
+}
+@article{elliott53-387,
+author={R. J. Elliott and K. W. H. Stevens},
+journal={Proc. Poy. Soc.},
+volume={A219},
+year=1953,
+pages=387}
+@article{raowallace,
+  author = {V U S Rao and W E Wallace},
+  title2 = {Calculation of the Influence of the Crystalline Electric Field on the Spin-Disorder Resistivity of Rare Earth Alloys and Comparison with Results on CeAl$_2$},
+  journal = {Phys. Rev. B},
+  volume = {2},
+  pages = {4613--4616},
+  year = {1970},
+  publisher = {American Physical Society}
+}
+
+@article{helme09-134414,
+  journal = {Phys. Rev. B},
+  month = {Oct},
+  url = {http://link.aps.org/doi/10.1103/PhysRevB.80.134414},
+  publisher = {American Physical Society},
+  author = {Helme, L. M. and Boothroyd, A. T. and Coldea, R. and Prabhakaran, D. and Frost, C. D. and Keen, D. A. and Regnault, L. P. and Freeman, P. G. and Enderle, M. and Kulda, J.},
+  title = {Magnetic order and dynamics of the charge-ordered antiferromagnet ${\text{La}}_{1.5}{\text{Sr}}_{0.5}{\text{CoO}}_{4}$},
+  year = {2009},
+  pages = {134414},
+  numpages = {15},
+  volume = {80},
+  doi = {10.1103/PhysRevB.80.134414},
+  issue = {13}
+}
+
+
+@article{walker08-395221,
+   author = {H C Walker and K A McEwen and M D Le and L Paolasini and D Fort},
+   title2 = {X-ray resonant scattering determination of the
+antiferroquadrupolar ordering in UPd$_3$ at low temperatures},
+   journal = {J. Phys.: Condens. Matter},
+   volume = {20},
+   pages = {395221},
+   year = {2008},
+   publisher = {Institute of Physics}
+}
+
+
+@Article{walker06-137203,
+  title = {Determination of the Antiferroquadrupolar Order Parameters in $UPd_{3}$},
+  author = {Walker, H. C. and McEwen, K. A. and McMorrow, D. F. and Wilkins, S. B. and Wastin, F.  and Colineau, E.  and Fort, D. },
+  journal = {Phys. Rev. Lett.},
+  volume = {97},
+  number = {13},
+  pages = {137203},
+  numpages = {4},
+  year = {2006},
+  month = {Sep},
+  doi = {10.1103/PhysRevLett.97.137203},
+  publisher = {American Physical Society}
+}
+
+
+
+
+@article{blanco97-756,
+title = "Dynamics of PrNi2Si2 in its modulated magnetic phase",
+journal = "Physica B: Condensed Matter",
+volume = "234-236",
+number = "",
+pages = "756 - 757",
+year = "1997",
+note = "Proceedings of the First European Conference on Neutron Scattering",
+issn = "0921-4526",
+doi = "DOI: 10.1016/S0921-4526(96)01153-2",
+url = "http://www.sciencedirect.com/science/article/pii/S0921452696011532",
+author = "J. A. Blanco and B. Fak and R. M. Nicklow and B. Roessli and D. Schmitt",
+keywords = "Critical phenomena",
+keywords = "Incommensurate structures",
+keywords = "Rare-earth compounds",
+keywords = "Spin waves"
+}
+
+
+@Article{jensen87-3327,
+  title = {Magnetic excitations in the longitudinally polarized antiferromagnetic phase of praseodymium},
+  author = {Jensen, Jens  and McEwen, Keith A. and Stirling, William G.},
+  journal = {Phys. Rev. B},
+  volume = {35},
+  number = {7},
+  pages = {3327--3340},
+  numpages = {13},
+  year = {1987},
+  month = {Mar},
+  doi = {10.1103/PhysRevB.35.3327},
+  publisher = {American Physical Society}
+}
+
 @article{lewtas10-184420,
 author={H. J. Lewtas and A. T. Boothroyd and M. Rotter and D. Prabhakaran and H. M\"uller and  M. D. Le and B. Roessli and J. Gavilano and P. Bourges},
 title={Magnetic excitations in multiferroic LuMnO$_3$ studied by inelastic neutron scattering},
@@ -447,9 +563,9 @@ year = {2002},
 
 
 @article{fernandez10-22202,
-  author={Javier Fernández-Rodríguez and Stephen W Lovesey and Jesús A Blanco},
+  author={Javier Fern\'andez-Rodr\'iguez and Stephen W Lovesey and Jes\'us A Blanco},
   title={Antiferro-quadrupolar structures in UPd 3 inferred from x-ray resonant Bragg diffraction},
-  journal={Journal of Physics: Condensed Matter},
+  journal={J. Phys.: Condens. Matter},
   volume={22},
   number={2},
   pages={022202},
@@ -478,7 +594,7 @@ note = "Proceedings of the International Conference on Magnetism, Part II",
 issn = "0304-8853",
 doi = "DOI: 10.1016/0304-8853(92)90579-D",
 url = "http://www.sciencedirect.com/science/article/B6TJJ-46X9M56-87/2/176a6ecb354b1aec2f04ef12de6f339f",
-author = "J.A. Blanco and D. Gignoux and J.C. Gómez Sal and D. Schmitt"
+author = "J.A. Blanco and D. Gignoux and J.C. Gomez Sal and D. Schmitt"
 }
 
 @article{blanco98-518,
@@ -558,11 +674,20 @@ year= 1967}
   publisher = {American Physical Society}
 }
 
-@unpublished{lewtas10-xx,
-author={H. Lewtas},
-journal={Phys Rev B},
-year=2010,
-note={to be published}}
+@Article{lewtas10-xx,
+  title = {Magnetic excitations in multiferroic LuMnO$_3$ studied by inelastic neutron scattering},
+  author = {Lewtas, H. J. and Boothroyd, A. T. and Rotter, M. and Prabhakaran, D. and M\"uller, H. and Le, M. D. and Roessli, B. and Gavilano, J. and Bourges, P.},
+  journal = {Phys. Rev. B},
+  volume = {82},
+  number = {18},
+  pages = {184420},
+  numpages = {7},
+  year = {2010},
+  month = {Nov},
+  doi = {10.1103/PhysRevB.82.184420},
+  publisher = {American Physical Society}
+}
+
 
 @Article{bramwell09-956,
 author={S. T. Bramwell and S. R. Giblin and S. Calder and R. Aldus and
@@ -1887,7 +2012,7 @@ pages={160-164}}
    author = {{Jensen}, J. and {Leask}, M.~J.~M. and {Wells}, M.~R. and {Ward}, R.~C.~C. and
 	{Hayden}, S.~M. and {Ramirez}, A.~P.},
     title = "{Magnetic properties of the dipole-coupled singlet-singlet system HoF$_{3}$}",
-  journal = {Journal of Magnetism and Magnetic Materials},
+  journal = {J. Magn. Magn. Mater.},
      year = 1995,
     month = feb,
    volume = 140,
@@ -2009,7 +2134,7 @@ pages=1168}
 @article{lewis70-809,
 title={Calculation of Spin-Orbit Coupling Constants and Other Radial Parameters for the Actinide Ions Using Relativistic Wavefunctions},
 author={W. B. Lewis and J. B. Mann and D. A. Liberman and D. T. Cromer},
-journal={J. of Chem. Phys.},
+journal={J. Chem. Phys.},
 volume=53,
 number=2,
 year=1970,
@@ -3085,7 +3210,7 @@ Math.}, volume={49}, pages={235}, year=1937}
    author    = {Y.~Onuki and Y.~Machii and Y.~Shimizu and T.~Komatsubara and
        T.~Fujita},
    title     = {Magnetic Property of a Dense Kondo Substance: CeCu$_2$},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {3562-3566},
    year      = {1985},
    volume    = {54},
@@ -3212,7 +3337,7 @@ Math.}, volume={49}, pages={235}, year=1937}
        and J.~Schweizer},
    title     = {Polarized Neutron Study of the Intermetallic Compounds
        GdAl$_2$},
-   journal   = {J.~of Magn.~Magn.~Mat.~},
+   journal   = {J. Magn.~Magn.~Mat.~},
    pages     = {247-248},
    year      = {1983},
    volume    = {31-34}
@@ -3423,7 +3548,7 @@ Math.}, volume={49}, pages={235}, year=1937}
 @article{alstad64-1752,
    author    = {J.~Alstad and S.~Legvold},
    title     = {Saturation Magnetostriction Constants of Gadolinium},
-   journal   = {J.~of Appl.~Phys.~},
+   journal   = {J. Appl.~Phys.~},
    pages     = {1752-1753},
    year      = {1964},
    volume    = {35},
@@ -3434,7 +3559,7 @@ Math.}, volume={49}, pages={235}, year=1937}
 @article{alstad64-1752a,
    author    = {J.~Alstad and S.~Legvold},
    title     = {Saturation Magnetostriction Constants of Gadolinium},
-   journal   = {J.~of Appl.~Phys.~},
+   journal   = {J. Appl.~Phys.~},
    pages     = {1752-1753},
    year      = {1964},
    volume    = {35},
@@ -4529,72 +4654,6 @@ Math.}, volume={49}, pages={235}, year=1937}
 }
 
 
-@article{blanco92-8233a,
-   author    = {J.~A Blanco and J.~C.~G\'omez Sal and J.~Rodr\'iguez Fernandez
-       and D.~Gignoux and D.~Schmitt and J.~Rodr\'iguez-Carvajal},
-   journal   = {J.~Phys.: Condens.~Matter},
-   pages     = {8233-8244},
-   year      = {1992},
-   volume    = {4},
-   note      = {gdni}
-}
-
-
-@article{blanco92-8233aa,
-   author    = {J.~A Blanco and J.~C.~G\'omez Sal and J.~Rodr\'iguez Fernandez
-       and D.~Gignoux and D.~Schmitt and J.~Rodr\'iguez-Carvajal},
-   journal   = {J.~Phys.: Condens.~Matter},
-   pages     = {8233-8244},
-   year      = {1992},
-   volume    = {4},
-   note      = {gdni}
-}
-
-
-@article{blanco92-8233aaa,
-   author    = {J.~A Blanco and J.~C.~G\'omez Sal and J.~Rodr\'iguez Fernandez
-       and D.~Gignoux and D.~Schmitt and J.~Rodr\'iguez-Carvajal},
-   journal   = {J.~Phys.: Condens.~Matter},
-   pages     = {8233-8244},
-   year      = {1992},
-   volume    = {4},
-   note      = {gdni}
-}
-
-
-@article{blanco92-8233aab,
-   author    = {J.~A Blanco and J.~C.~G\'omez Sal and J.~Rodr\'iguez Fernandez
-       and D.~Gignoux and D.~Schmitt and J.~Rodr\'iguez-Carvajal},
-   journal   = {J.~Phys.: Condens.~Matter},
-   pages     = {8233-8244},
-   year      = {1992},
-   volume    = {4},
-   note      = {gdni}
-}
-
-
-@article{blanco92-8233ab,
-   author    = {J.~A Blanco and J.~C.~G\'omez Sal and J.~Rodr\'iguez Fernandez
-       and D.~Gignoux and D.~Schmitt and J.~Rodr\'iguez-Carvajal},
-   journal   = {J.~Phys.: Condens.~Matter},
-   pages     = {8233-8244},
-   year      = {1992},
-   volume    = {4},
-   note      = {gdni}
-}
-
-
-@article{blanco92-8233ac,
-   author    = {J.~A Blanco and J.~C.~G\'omez Sal and J.~Rodr\'iguez Fernandez
-       and D.~Gignoux and D.~Schmitt and J.~Rodr\'iguez-Carvajal},
-   journal   = {J.~Phys.: Condens.~Matter},
-   pages     = {8233-8244},
-   year      = {1992},
-   volume    = {4},
-   note      = {gdni}
-}
-
-
 @article{blanco92-8233b,
    author    = {J.~A.~Blanco and J.~C.~G\'omez Sal and J.~Rodr\'iguez Fernandez
        and D.~Gignoux and D.~Schmitt and J.~
@@ -4610,21 +4669,6 @@ Math.}, volume={49}, pages={235}, year=1937}
 
 
 @article{blanco99-512,
-   author    = {J.~A.~Blanco and J.~I.~Espeso and J.~I.~Garc\'iaSoldevilla and
-       J.~C.~G\'omezSal
-       and M.~R.~Ibarra and C.~Marquina and H.~E.~Fischer},
-   title     = {Magnetic structure of GdCu through the martensitic structural
-       transformation: A neutron -diffraction study},
-   journal   = {Phys.~Rev.~},
-   pages     = {512-518},
-   year      = {1999},
-   volume    = {B 59},
-   number    = {1},
-   ordner    = {gdcu}
-}
-
-
-@article{blanco99-512a,
    author    = {J.~A.~Blanco and J.~I.~Espeso and J.~I.~Garc\'iaSoldevilla and
        J.~C.~G\'omezSal
        and M.~R.~Ibarra and C.~Marquina and H.~E.~Fischer},
@@ -5892,7 +5936,7 @@ Math.}, volume={49}, pages={235}, year=1937}
        M.~Rotter and M.~Loewenhaupt},
    title     = {Thermal expansion and magnetostriction study on UNiAl single
        crystals},
-   journal   = {Czechoslovak J.~of Physics},
+   journal   = {Czechoslovak J. Physics},
    pages     = {A237-240},
    year      = 2002,
    volume    = {52},
@@ -7152,7 +7196,7 @@ Math.}, volume={49}, pages={235}, year=1937}
    author    = {N.~P.~Duong and K.~H.~J.~Buschow and E.~Br\"uck and
        J.~C.~P.~Klaasse and P.~E.~Brommer and L.~T.~Tai and T.~D.~Hien},
    title     = {Magnetic Properties of GdT$_2$Ge$_2$ Compounds (T= 3d, 4d)},
-   journal   = {J.~of Alloys and Comp.~},
+   journal   = {J. Alloys and Comp.~},
    pages     = {18-25},
    year      = {2000},
    volume    = {298}
@@ -7510,48 +7554,6 @@ year= 1987}
 }
 
 
-@article{espeso94-1009aa,
-   author    = {J.~I.~Espeso and J.~Rodr\'iguez Fern\'andez and J.~C.~G\'omez-
-       Sal and J.~A.~Blanco},
-   journal   = {IEEE Transactions on Magnetics},
-   pages     = {1009-1011},
-   year      = {1994},
-   volume    = {30(2)},
-   note      = {gdni}
-}
-
-
-@article{espeso94-1009ab,
-   author    = {J.~I.~Espeso and J.~Rodr\'iguez Fern\'andez and J.~C.~G\'omez-
-       Sal and J.~A.~Blanco},
-   journal   = {IEEE Transactions on Magnetics},
-   pages     = {1009-1011},
-   year      = {1994},
-   volume    = {30(2)},
-   note      = {gdni}
-}
-
-
-@article{espeso94-1009b,
-   author    = {J.~I.~Espeso and J.~Rodr\'iguez Fern\'andez and J.~C.~G\'omez-
-       Sal and J.~A.~Blanco},
-   journal   = {IEEE Transactions on Magnetics},
-   pages     = {1009-1011},
-   year      = {1994},
-   volume    = {30(2)},
-   note      = {gdni}
-}
-
-
-@article{espeso94-1009c,
-   author    = {J.~I.~Espeso and J.~Rodr\'iguez Fern\'andez and J.~C.~G\'omez-
-       Sal and J.~A.~Blanco},
-   journal   = {IEEE Transactions on Magnetics},
-   pages     = {1009-1011},
-   year      = {1994},
-   volume    = {30(2)},
-   note      = {gdni}
-}
 
 
 @article{essen80-1149a,
@@ -8405,7 +8407,7 @@ year= 1987}
    author    = {U.~Gasser and P.~Allenspach and A.~Furrer and A.~M.~Mulders},
    title     = {Two types of magnetism in the magnetic superconductor
        TmNi$_2$B$_2$C},
-   journal   = {J.~of Allos and Comp.~},
+   journal   = {J. Allos and Comp.~},
    pages     = {587-590},
    year      = 1998,
    volume    = {275-277}
@@ -8416,7 +8418,7 @@ year= 1987}
    author    = {U.~Gasser and P.~Allenspach and A.~Furrer and A.~M.~Mulders},
    title     = {Two types of magnetism in the magnetic superconductor
        TmNi$_2$B$_2$C},
-   journal   = {J.~of Allos and Comp.~},
+   journal   = {J. Alloys and Comp.~},
    pages     = {587-590},
    year      = 1998,
    volume    = {275-277}
@@ -10247,7 +10249,7 @@ year= 1987}
 @article{ibarra89-233,
    author    = {M.~R.~Ibarra and T.~S.~Chien and A.~S.~Pavlovic},
    title     = {Structural Instability in RCu Intermetallic Compounds},
-   journal   = {J.~of the Less-Common Met.~},
+   journal   = {J. Less-Common Met.~},
    pages     = {233-243},
    year      = {1989},
    volume    = {153}
@@ -10397,7 +10399,7 @@ year=1974}
 @article{iwasa94-127,
    author    = {K. Iwasa and N. Wakabayashi and T. Takabatake and H. Fuji and T. Shigeoka},
    title     = {Lattice Modulation Induced by Magnetoelastic Effect in Crystals Containing Rare Earth Elements},
-   journal   = {J. of the Phys. Soc. of Japan},
+   journal   = {J. Phys. Soc. of Japan},
    pages     = {127-134},
    year      = 1994,
    volume    = 63,
@@ -11426,7 +11428,7 @@ year=1974}
 @article{kida99-650,
    author    = {Y. Kida and K. Tjima and Y. Shinoda and K. Hayashi and H. Ohsumi},
    title     = {Effect of Magnetic Field on Crystal Lattice in Dysprosium Studied by X.Ray Diffraction},
-   journal   = {J. of the Phys. Soc. of Japan},
+   journal   = {J. Phys. Soc. of Japan},
    pages     = {650-654},
    year      = 1999,
    volume    = 68,
@@ -13100,7 +13102,7 @@ year=1974}
    title     = {Magnetic field induced Ising axis conversion in
        Tb$_{0.~5}$Dy$_{0.~5}$Cu$_2$ single
        crystals},
-   journal   = {Brazilian J.~of Phys.~},
+   journal   = {Brazilian J. Phys.~},
    pages     = {754-757},
    year      = {2000},
    volume    = {30}
@@ -13114,7 +13116,7 @@ year=1974}
    title     = {Magnetic field induced Ising axis conversion in
        Tb$_{0.~5}$Dy$_{0.~5}$Cu$_2$ single
        crystals},
-   journal   = {Brazilian J.~of Phys.~},
+   journal   = {Brazilian J. Phys.~},
    pages     = {754-757},
    year      = {2000},
    volume    = {30}
@@ -13485,7 +13487,7 @@ year=1974}
    author    = {M.~Loewenhaupt and N.~M.~Pyka},
    title     = {The Ultrahigh FLux Polarized Cold Neutron Spectrometer PANDA at
        the FRM-II Reactor},
-   journal   = {J.~of Appl Phys.~},
+   journal   = {J. Appl Phys.~},
    pages     = {5145-5149},
    year      = {1999},
    volume    = {85},
@@ -13497,7 +13499,7 @@ year=1974}
    author    = {M.~Loewenhaupt and N.~M.~Pyka},
    title     = {The Ultrahigh FLux Polarized Cold Neutron Spectrometer PANDA at
        the FRM-II Reactor},
-   journal   = {J.~of Appl Phys.~},
+   journal   = {J. Appl Phys.~},
    pages     = {5145-5149},
    year      = {1999},
    volume    = {85},
@@ -14070,7 +14072,7 @@ year=1974}
 @article{masada99-2414,
    author    = {G. Masada and K. Tjima},
    title     = {Lattice Modulation and Magnetic Structure of Er Induced by Magnetic Field},
-   journal   = {J. of the Phys. Soc. of Japan},
+   journal   = {J. Phys. Soc. of Japan},
    pages     = {2414-2419},
    year      = 1999,
    volume    = 68,
@@ -14293,7 +14295,7 @@ year=1974}
        H.~A.~Alperin},
    title     = {Magnetic Structure and Exchange Interactions in Cubic Gadolinium
        Compounds},
-   journal   = {J.~of Appl.~Phys.~},
+   journal   = {J. Appl.~Phys.~},
    pages     = {1009-1010},
    year      = {1969},
    volume    = {40},
@@ -14306,7 +14308,7 @@ year=1974}
        H.~A.~Alperin},
    title     = {Magnetic Structure and Exchange Interactions in Cubic Gadolinium
        Compounds},
-   journal   = {J.~of Appl.~Phys.~},
+   journal   = {J. Appl.~Phys.~},
    pages     = {1009-1010},
    year      = {1969},
    volume    = {40},
@@ -15254,7 +15256,7 @@ year=1974}
    author    = {E.~Obataya and M.~Norimoto},
    title     = {Acoustice properties of a reed (Arundo donax L.~) used for the
        vibrating plate of a clarinet},
-   journal   = {J.~of the Acoust.~Soc.~of America},
+   journal   = {J. Acoust.~Soc.~of America},
    pages     = {1106-1110},
    year      = 1999,
    volume    = 106,
@@ -15266,7 +15268,7 @@ year=1974}
    author    = {E.~Obataya and M.~Norimoto},
    title     = {Acoustice properties of a reed (Arundo donax L.~) used for the
        vibrating plate of a clarinet},
-   journal   = {J.~of the Acoust.~Soc.~of America},
+   journal   = {J. Acoust.~Soc.~of America},
    pages     = {1106-1110},
    year      = 1999,
    volume    = 106,
@@ -15457,7 +15459,7 @@ year=1974}
 @article{ohsumi02-1732,
    author    = {H.~Ohsumi},
    title     = {Magnetoelastic Effect in Holmium sutdied by X-Ray Diffraction},
-   journal   = {J.~of Phy.~Soc.~Jap.~},
+   journal   = {J. Phy.~Soc.~Jap.~},
    pages     = {1732-1739},
    year      = 2002,
    volume    = 71,
@@ -15468,7 +15470,7 @@ year=1974}
 @article{ohsumi02-1732a,
    author    = {H.~Ohsumi},
    title     = {Magnetoelastic Effect in Holmium sutdied by X-Ray Diffraction},
-   journal   = {J.~of Phy.~Soc.~Jap.~},
+   journal   = {J. Phy.~Soc.~Jap.~},
    pages     = {1732-1739},
    year      = 2002,
    volume    = 71,
@@ -16346,7 +16348,7 @@ year=1974}
 
 @article{pyka02-277,
    author    = {N.~M.~Pyka and K.~Noack and A.~Rogov},
-   journal   = {J.~of Appl.~Phys.~},
+   journal   = {J. Appl.~Phys.~},
    pages     = {S277-279},
    year      = {2002},
    volume    = {A 74}
@@ -16355,7 +16357,7 @@ year=1974}
 
 @article{pyka02-277a,
    author    = {N.~M.~Pyka and K.~Noack and A.~Rogov},
-   journal   = {J.~of Appl.~Phys.~},
+   journal   = {J. Appl.~Phys.~},
    pages     = {S277-279},
    year      = {2002},
    volume    = {A 74}
@@ -16364,7 +16366,7 @@ year=1974}
 
 @article{pyka02-277aa,
    author    = {N.~M.~Pyka and K.~Noack and A.~Rogov},
-   journal   = {J.~of Appl.~Phys.~},
+   journal   = {J. Appl.~Phys.~},
    pages     = {S277-279},
    year      = {2002},
    volume    = {A 74}
@@ -16373,7 +16375,7 @@ year=1974}
 
 @article{pyka02-277ab,
    author    = {N.~M.~Pyka and K.~Noack and A.~Rogov},
-   journal   = {J.~of Appl.~Phys.~},
+   journal   = {J. Appl.~Phys.~},
    pages     = {S277-279},
    year      = {2002},
    volume    = {A 74}
@@ -16382,7 +16384,7 @@ year=1974}
 
 @article{pyka02-277b,
    author    = {N.~M.~Pyka and K.~Noack and A.~Rogov},
-   journal   = {J.~of Appl.~Phys.~},
+   journal   = {J. Appl.~Phys.~},
    pages     = {S277-279},
    year      = {2002},
    volume    = {A 74}
@@ -16391,7 +16393,7 @@ year=1974}
 
 @article{pyka02-277c,
    author    = {N.~M.~Pyka and K.~Noack and A.~Rogov},
-   journal   = {J.~of Appl.~Phys.~},
+   journal   = {J. Appl.~Phys.~},
    pages     = {S277-279},
    year      = {2002},
    volume    = {A 74}
@@ -17261,7 +17263,7 @@ Publisher="Kluwer Academic",
    author    = {M.~Rotter and  M.~Doerr and M.~Loewenhaupt},
    title     = {Modeling Magentostriction in RCu$_2$ Compounds using {\it
        McPhase}},
-   journal   = {J.~of Appl.~Physics},
+   journal   = {J. Appl.~Phys.},
    pages     = {8885-8887},
    year      = 2002,
    volume    = {91},
@@ -17273,7 +17275,7 @@ Publisher="Kluwer Academic",
    author    = {M.~Rotter and  M.~Doerr and M.~Loewenhaupt},
    title     = {Modeling Magentostriction in RCu$_2$ Compounds using {\it
        McPhase}},
-   journal   = {J.~of Appl.~Physics},
+   journal   = {J.~Appl.~Phys.},
    pages     = {8885-8887},
    year      = 2002,
    volume    = {91},
@@ -17735,7 +17737,7 @@ Publisher="Kluwer Academic",
    author    = {K.~Satoh and A.~Fukada and I.~Umehara and Y.~Onuki and H.~Sato
        and S.~Takayanagi},
    title     = {Anisotropic Magnetic Properties of CeCu$_2$},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {3267-3276},
    year      = {1992},
    volume    = {61},
@@ -17747,7 +17749,7 @@ Publisher="Kluwer Academic",
    author    = {K.~Satoh and A.~Fukada and I.~Umehara and Y.~Onuki and H.~Sato
        and S.~Takayanagi},
    title     = {Anisotropic Magnetic Properties of CeCu$_2$},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {3267-3276},
    year      = {1992},
    volume    = {61},
@@ -18051,7 +18053,7 @@ Publisher="Kluwer Academic",
        O.~Chernyavski and H.~Sato and T.~Fujita and T.~Suzuki and M.~Doerr and
        M.~Rotter and M.~Loewenhaupt and A.~Gukasov},
    title     = {Magnetic Field induced Irreversibility in UNiAl},
-   journal   = {J.~of Appl.~Phys.},
+   journal   = {J. Appl.~Phys.},
    pages     = {7639-7641},
    year      = 2001,
    volume    = 89,
@@ -18261,7 +18263,7 @@ Publisher="Kluwer Academic",
 @article{settai92-609,
    author    = {R.~Settai and T.~Goto and Y.~Onuki},
    title     = {Acoustic de Haas-van Alphen Effect of YCu$_2$ and CeCu$_2$},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {609-615},
    year      = {1992},
    volume    = {61},
@@ -18272,7 +18274,7 @@ Publisher="Kluwer Academic",
 @article{settai92-609a,
    author    = {R.~Settai and T.~Goto and Y.~Onuki},
    title     = {Acoustic de Haas-van Alphen Effect of YCu$_2$ and CeCu$_2$},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {609-615},
    year      = {1992},
    volume    = {61},
@@ -19326,7 +19328,7 @@ Publisher="Kluwer Academic",
    author    = {H.~Sugawara and P.~Svoboda and Y.~Aoki and H.~Sato and R.~Settai
        and Y.~Onuki and K.~Sugiyama and S.~Takayanagi},
    title     = {Magnetic and Electrical Properties of NdCu$_2$},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {4889-4895},
    year      = {1995},
    volume    = {64},
@@ -19338,7 +19340,7 @@ Publisher="Kluwer Academic",
    author    = {H.~Sugawara and P.~Svoboda and Y.~Aoki and H.~Sato and R.~Settai
        and Y.~Onuki and K.~Sugiyama and S.~Takayanagi},
    title     = {Magnetic and Electrical Properties of NdCu$_2$},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {4889-4895},
    year      = {1995},
    volume    = {64},
@@ -19509,7 +19511,7 @@ Publisher="Kluwer Academic",
        K.~Kindo and T.~Takeuchi and R.~Settai and Y.~Onuki},
    title     = {High field Magnetizitation in TbCu$_2$ and HoCu$_2$ Single
        Crystals},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {3244-3250},
    year      = {1998},
    volume    = {67},
@@ -19522,7 +19524,7 @@ Publisher="Kluwer Academic",
        K.~Kindo and T.~Takeuchi and R.~Settai and Y.~Onuki},
    title     = {High field Magnetizitation in TbCu$_2$ and HoCu$_2$ Single
        Crystals},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {3244-3250},
    year      = {1998},
    volume    = {67},
@@ -19636,7 +19638,7 @@ Publisher="Kluwer Academic",
    author    = {P.~Svoboda and J.~Verjpravova and  M.~Hofmann and R.~Schneider
        and M.~Rotter and M.~Doerr and M.~Loewenhaupt},
    title     = {Antiferromagnetic ordering in TmCu$_2$},
-   journal   = {Czechoslovak J.~of Physics},
+   journal   = {Czechoslovak J. Physics},
    pages     = {267-270},
    year      = 2001,
    volume    = {52},
@@ -19648,7 +19650,7 @@ Publisher="Kluwer Academic",
    author    = {P.~Svoboda and J.~Verjpravova and  M.~Hofmann and R.~Schneider
        and M.~Rotter and M.~Doerr and M.~Loewenhaupt},
    title     = {Antiferromagnetic ordering in TmCu$_2$},
-   journal   = {Czechoslovak J.~of Physics},
+   journal   = {Czechoslovak J. Physics},
    pages     = {267-270},
    year      = 2001,
    volume    = {52},
@@ -20145,7 +20147,7 @@ Publisher="Kluwer Academic",
    author    = {S.~Takayanagi and Y.~Onuki and T.~Komatsubara},
    title     = {Anisotropic Magnetic Susceptibilities in Non-Cubic Cerium
        Intermetallic Compounds: CeCu$_2$Si$_2$, CeCu$_6$ and CeCu$_2$},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {2384-2389},
    year      = {1986},
    volume    = {55},
@@ -20157,7 +20159,7 @@ Publisher="Kluwer Academic",
    author    = {S.~Takayanagi and Y.~Onuki and T.~Komatsubara},
    title     = {Anisotropic Magnetic Susceptibilities in Non-Cubic Cerium
        Intermetallic Compounds: CeCu$_2$Si$_2$, CeCu$_6$ and CeCu$_2$},
-   journal   = {J.~of Phys.~Soc.~Jpn.~},
+   journal   = {J. Phys.~Soc.~Jpn.~},
    pages     = {2384-2389},
    year      = {1986},
    volume    = {55},
@@ -20274,7 +20276,7 @@ Publisher="Kluwer Academic",
        Y.~Onuki},
    title     = {Anisotropic Thermal Expansion and Field-Induced Structural Phase
        Transition in PrCu$_2$},
-   journal   = {J.~of  Phys.~Soc.~Jpn.~},
+   journal   = {J.  Phys.~Soc.~Jpn.~},
    pages     = {1404-1408},
    year      = {1996},
    volume    = {65},
@@ -20287,7 +20289,7 @@ Publisher="Kluwer Academic",
        Y.~Onuki},
    title     = {Anisotropic Thermal Expansion and Field-Induced Structural Phase
        Transition in PrCu$_2$},
-   journal   = {J.~of  Phys.~Soc.~Jpn.~},
+   journal   = {J.  Phys.~Soc.~Jpn.~},
    pages     = {1404-1408},
    year      = {1996},
    volume    = {65},
@@ -20414,7 +20416,7 @@ Publisher="Kluwer Academic",
 
 @article{talik95-795,
    author    = {E.~Talik and M.~Neumann},
-   journal   = {J.~of Magn.~Magn.~Mat.~},
+   journal   = {J. Magn.~Magn.~Mat.~},
    pages     = {795-796},
    year      = {1995},
    volume    = {140-144},
@@ -20424,7 +20426,7 @@ Publisher="Kluwer Academic",
 
 @article{talik95-795a,
    author    = {E.~Talik and M.~Neumann},
-   journal   = {J.~of Magn.~Magn.~Mat.~},
+   journal   = {J. Magn.~Magn.~Mat.~},
    pages     = {795-796},
    year      = {1995},
    volume    = {140-144},
@@ -20434,7 +20436,7 @@ Publisher="Kluwer Academic",
 
 @article{talik95-795aa,
    author    = {E.~Talik and M.~Neumann},
-   journal   = {J.~of Magn.~Magn.~Mat.~},
+   journal   = {J. Magn.~Magn.~Mat.~},
    pages     = {795-796},
    year      = {1995},
    volume    = {140-144},
@@ -20444,7 +20446,7 @@ Publisher="Kluwer Academic",
 
 @article{talik95-795ab,
    author    = {E.~Talik and M.~Neumann},
-   journal   = {J.~of Magn.~Magn.~Mat.~},
+   journal   = {J. Magn.~Magn.~Mat.~},
    pages     = {795-796},
    year      = {1995},
    volume    = {140-144},
@@ -20454,7 +20456,7 @@ Publisher="Kluwer Academic",
 
 @article{talik95-795b,
    author    = {E.~Talik and M.~Neumann},
-   journal   = {J.~of Magn.~Magn.~Mat.~},
+   journal   = {J. Magn.~Magn.~Mat.~},
    pages     = {795-796},
    year      = {1995},
    volume    = {140-144},
@@ -20464,7 +20466,7 @@ Publisher="Kluwer Academic",
 
 @article{talik95-795c,
    author    = {E.~Talik and M.~Neumann},
-   journal   = {J.~of Magn.~Magn.~Mat.~},
+   journal   = {J. Magn.~Magn.~Mat.~},
    pages     = {795-796},
    year      = {1995},
    volume    = {140-144},
@@ -20828,7 +20830,7 @@ Publisher="Kluwer Academic",
        P.~E.~Brommer and N.~P.~Thuy},
    title     = {A study of magnetic coupling in GdT$_2$Si$_2$ compounds
        (T=transition metal)},
-   journal   = {J.~of All.~Comp.~},
+   journal   = {J. All.~Comp.~},
    pages     = {35-43},
    year      = 1997,
    volume    = 260
@@ -20840,7 +20842,7 @@ Publisher="Kluwer Academic",
        P.~E.~Brommer and N.~P.~Thuy},
    title     = {A study of magnetic coupling in GdT$_2$Si$_2$ compounds
        (T=transition metal)},
-   journal   = {J.~of All.~Comp.~},
+   journal   = {J. All.~Comp.~},
    pages     = {35-43},
    year      = 1997,
    volume    = 260
@@ -20959,7 +20961,7 @@ Publisher="Kluwer Academic",
        Y.~Onuki},
    title     = {Thermal Expansion Coefficients of CeCu$_2$ and Ycu$_2$ Single
        Crystals},
-   journal   = {J.~of  Phys.~Soc.~Jpn.~},
+   journal   = {J.  Phys.~Soc.~Jpn.~},
    pages     = {3443-3446},
    year      = {1990},
    volume    = {59},
@@ -20972,7 +20974,7 @@ Publisher="Kluwer Academic",
        Y.~Onuki},
    title     = {Thermal Expansion Coefficients of CeCu$_2$ and Ycu$_2$ Single
        Crystals},
-   journal   = {J.~of  Phys.~Soc.~Jpn.~},
+   journal   = {J.  Phys.~Soc.~Jpn.~},
    pages     = {3443-3446},
    year      = {1990},
    volume    = {59},
@@ -21010,7 +21012,7 @@ Publisher="Kluwer Academic",
    author    = {Y.~Uwatoko and G.~Oomi I.~Umehara and Y.~Onuki},
    title     = {Thermal Expansion of Single Crystalline Kondo Compound
        CeCu$_2$},
-   journal   = {J.~of  Phys.~Soc.~Jpn.~},
+   journal   = {J.  Phys.~Soc.~Jpn.~},
    pages     = {3823-3828},
    year      = {1991},
    volume    = {60},
@@ -21022,7 +21024,7 @@ Publisher="Kluwer Academic",
    author    = {Y.~Uwatoko and G.~Oomi I.~Umehara and Y.~Onuki},
    title     = {Thermal Expansion of Single Crystalline Kondo Compound
        CeCu$_2$},
-   journal   = {J.~of  Phys.~Soc.~Jpn.~},
+   journal   = {J.  Phys.~Soc.~Jpn.~},
    pages     = {3823-3828},
    year      = {1991},
    volume    = {60},
@@ -21034,7 +21036,7 @@ Publisher="Kluwer Academic",
    author    = {Y.~Uwatoko and G.~Oomi and I.~Umehara and Y.~Onuki},
    title     = {Anisotropic Thermal Expansion Coefficients of CeCu$_2$ Single
        Crystal under High Pressure},
-   journal   = {J.~of  Phys.~Soc.~Jpn.~},
+   journal   = {J.  Phys.~Soc.~Jpn.~},
    pages     = {2624-2627},
    year      = {1992},
    volume    = {61},
@@ -21046,7 +21048,7 @@ Publisher="Kluwer Academic",
    author    = {Y.~Uwatoko and G.~Oomi and I.~Umehara and Y.~Onuki},
    title     = {Anisotropic Thermal Expansion Coefficients of CeCu$_2$ Single
        Crystal under High Pressure},
-   journal   = {J.~of  Phys.~Soc.~Jpn.~},
+   journal   = {J.  Phys.~Soc.~Jpn.~},
    pages     = {2624-2627},
    year      = {1992},
    volume    = {61},
@@ -21224,7 +21226,7 @@ Publisher="Kluwer Academic",
    author    = {J.~Verjpravova and P.~Svoboda and D.~Rafaja and I.~Cisarova and
        M.~Rotter and M.~Doerr and M.~Loewenhaupt},
    title     = {Crystal growth and magnetic properties of SmCu$_2$},
-   journal   = {Czechoslovak J.~of Physics},
+   journal   = {Czechoslovak J. Physics},
    pages     = {A233-236},
    year      = 2001,
    volume    = {52},
@@ -21236,7 +21238,7 @@ Publisher="Kluwer Academic",
    author    = {J.~Verjpravova and P.~Svoboda and D.~Rafaja and I.~Cisarova and
        M.~Rotter and M.~Doerr and M.~Loewenhaupt},
    title     = {Crystal growth and magnetic properties of SmCu$_2$},
-   journal   = {Czechoslovak J.~of Physics},
+   journal   = {Czechoslovak J. Physics},
    pages     = {A233-236},
    year      = 2001,
    volume    = {52},
@@ -21506,7 +21508,7 @@ Publisher="Kluwer Academic",
 @article{white97-1269,
    author    = {G.~K.~White and M.~L.~Minges},
    title     = {Thermophysical Properties of Some Key Solids: An Update},
-   journal   = {Int.~J.~of Thermophys.~},
+   journal   = {Int.~J. Thermophys.~},
    pages     = {1269-1327},
    year      = {1997},
    volume    = {18}
@@ -21516,7 +21518,7 @@ Publisher="Kluwer Academic",
 @article{white97-1269a,
    author    = {G.~K.~White and M.~L.~Minges},
    title     = {Thermophysical Properties of Some Key Solids: An Update},
-   journal   = {Int.~J.~of Thermophys.~},
+   journal   = {Int.~J. Thermophys.~},
    pages     = {1269-1327},
    year      = {1997},
    volume    = {18}
@@ -21945,31 +21947,14 @@ Publisher="Kluwer Academic",
    ordner    = {nothing}
 }
 
-@unpublished{mdl2010,
-   author    = { M. D. Le and others},
-   title     = {},
-   year      = 2010,
-   note      = {to be published},
-   journal   = {}
-}
-
-@article{raowallace,
-  author = {V U S Rao and W E Wallace},
-  title2 = {Calculation of the Influence of the Crystalline Electric Field on the Spin-Disorder Resistivity of Rare Earth Alloys and Comparison with Results on CeAl$_2$},
-  journal = {Phys. Rev. B},
-  volume = {2},
-  pages = {4613--4616},
-  year = {1970},
-  publisher = {American Physical Society}
-}
-
-@article{dekker,
-  author = {A J Dekker},
-  title2 = {Electrical Resistivity of Metals and Alloys Containing Localized Magnetic Moment},
-  journal = {J. Appl. Phys.},
-  volume = {36},
-  pages = {906--912},
-  year = {1965},
-  publisher = {American Institute of Physics}
+@article{mdl2010,
+   author = {M D Le and K A McEwen and M Rotter and M Doerr and A
+Barcza and J.-G. Park and J Brooks and E Jobiliong and D Fort},
+   title = {A Mean Field Model for the Quadrupolar Phases of UPd$_3$},
+   journal = {},
+   volume = {},
+   pages = {in preparation},
+   year = {2011},
+   publisher = {}
 }
 
