--- a/doc/mcdiff.tex
+++ b/doc/mcdiff.tex
@@ -606,7 +606,7 @@ Here the thermal expectation values $\langle \dots \rangle_{T,H}$
 for each ion $d$. Note that  the scattering operators correspond to the
 Fourier transform of the atomic magnetisation density: $\hat \mathcal Q=\frac{1}{2\mu_B}\hat M(\mbf Q)$.
 Once the eigenstates of each ion are known  in terms of 
-atomic wave functions $|SLJM' \rangle $ (with $M=-J,-J+1,\dots J$) this
+atomic wave functions $|SLJM \rangle $ (with $M=-J,-J+1,\dots J$) this
 evaluation can be performed by means of the following expressions for
  the matrix elements of the scattering operator (compare chapter 11.6.2
  in~\cite{lovesey84-1},equations 
