--- a/doc/q_int.tex
+++ b/doc/q_int.tex
@@ -9,8 +9,8 @@ can be described by products of Stevens operators. The general two ion exchange 
 \begin{equation}
 \label{multipolehamiltonrepeated}
  {\mathcal H}_{JJ}=
-             -\frac{1}{2}  \sum_{ss'} \sum_ {ll'} \sum_{mm'}
-     {\mathcal K}_{ll'}^{mm'}(ss') O_{lm}({\mbf J}^s) O_{l'm'}({\mbf J}^s)
+             -\frac{1}{2}  \sum_{nn'} \sum_ {ll'} \sum_{mm'}
+     {\mathcal K}_{ll'}^{mm'}(nn') O_{lm}({\mbf J}^n) O_{l'm'}({\mbf J}^{n'})
 \end{equation}
 
 For further information on the notation and symmetry restrictions to the
